# geko

./: .gitignore  .readthedocs.yaml  PysersicRuns.py  README.md  __init__.py  environment.yml  figure_setup.py  fit_numpyro.py  fitting.py  grism.py  model_jax.py  models.py  moments.py  plotting.py  postprocess.py  preprocess.py  pyproject.toml  requirements.txt  run_mock.py  run_pysersic.py  utils.py
.github/workflows/: tests.yml
demo/: simple_fit_demo.ipynb
demo/simple_fit_demo_files/catalogs/: my_galaxies_cat
demo/simple_fit_demo_files/morph_fits/: summary_191250_image_F150W_svi.cat
demo/simple_fit_demo_files/my_galaxy/: 191250_output  191250_results  config_real.yaml  (+1 more)
doc/: api.rst  api_config.rst  api_fitting.rst  api_grism.rst  api_models.rst  api_plotting.rst  api_preprocess.rst  api_utils.rst  conf.py  index.rst  installation.rst  requirements.txt  simple_fit_demo.ipynb  usage.rst
geko/: __init__.py  config.py  fitting.py  grism.py  grism_dev.py  models.py  moments.py  plotting.py  postprocess.py  preprocess.py  preprocess_dev.py  run_mock.py  utils.py
geko/testing/: run_mock.py
nircam_grism/FS_grism_config/: DISPL_modA_grismC.txt  DISPL_modA_grismR.txt  DISPL_modB_grismC.txt  DISPL_modB_grismR.txt  DISP_F322W2_modA_grismC.txt  DISP_F322W2_modA_grismR.txt  DISP_F322W2_modB_grismC.txt  DISP_F322W2_modB_grismR.txt  DISP_F444W_modA_grismC.txt  DISP_F444W_modA_grismR.txt  DISP_F444W_modB_grismC.txt  DISP_F444W_modB_grismR.txt
scripts/: run_pysersic.py
tests/: test_fitting.py  test_grism.py  test_preprocess.py  test_utils.py
(+4 files in other folders)
