[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geko"
version = "0.1.0"
description = "Geko: your awesome package"
authors = [{ name = "Your Name", email = "your@email.com" }]
#readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["geko"]
