[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-geko"
version = "0.1.0"
description = "Geko: the Grism Emission-line Kinematics tOol"
authors = [{ name = A. Lola Danhaive ", email = "angelicalola.danhaive@gmail.com" }]
#readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["geko"]
